--- a/src/editor/Editor.css
+++ b/src/editor/Editor.css
@@ -1,13 +1,44 @@
+body, #editor_container {
+    background: var(--ck-color-base-foreground);
+}
+
 .ck-rounded-corners .ck.ck-toolbar, .ck.ck-toolbar.ck-rounded-corners {
-    position: sticky;
+    position: fixed;
+    top: 64px;
+    width: 100%;
+    z-index: 10;
+
+    /* Create the illusion of the toolbar floating over the editable. */
+    box-shadow: 0 0 5px hsla( 0,0%,0%,.2 );
+
+    /* Use the CKEditor CSS variables to keep the UI consistent. */
+    border-bottom: 1px solid var(--ck-color-toolbar-border);
 }
 
 .ck-rounded-corners .ck.ck-editor__editable, .ck.ck-editor__editable.ck-rounded-corners {
-    height: 400px;
+    /* Set the dimensions of the "page". */
+    width: 8.6in;
+    min-height: 11in;
+
+    /* Keep the "page" off the boundaries of the container. */
+    padding: 1cm 2cm 2cm;
+
+    border: 1px hsl( 0,0%,82.7% ) solid;
+    border-radius: var(--ck-border-radius);
+    background: white;
+
+    /* The "page" should cast a slight shadow (3D illusion). */
+    box-shadow: 0 0 5px hsla( 0,0%,0%,.1 );
+
+    /* Center the "page". */
+    margin: 120px auto;
 }
 
 .editor_header {
-    height: 64px;
+    position: fixed;
+    top: 0;
+    z-index: 10;
+    width: 100%;
     background: #001529;
     padding: 0;
   }
@@ -20,6 +51,7 @@
   .editor_logo {
     color: white;
     font-size: 25px;
+    margin-top: 16px;
   }
   
   .editor_title {
