--- a/src/documentIndex/Drawer/CustomIcon.css
+++ b/src/documentIndex/Drawer/CustomIcon.css
@@ -23,7 +23,7 @@
 }
 
 .icon_list_container {
-  max-height: 240px;
+  max-height: 200px;
   margin-left: 20px;
   overflow-y: auto;
   overflow-x: hidden;
@@ -38,9 +38,9 @@
 .icon_color_btn {
   border: none;
   cursor: pointer;
-  width: 40px;
-  height: 40px;
-  margin: 5px 10px;
+  width: 35px;
+  height: 35px;
+  margin: 5px;
   border-radius: 100%;
 }
 
