--- a/src/editor/Editor.css
+++ b/src/editor/Editor.css
@@ -39,20 +39,15 @@ body {
   top: 0;
   z-index: 10;
   width: 100%;
+  height: 65px;
   background: #001529;
   padding: 0;
+  align-items: center;
 }
 
 .editor_logo {
   color: white;
   font-size: 25px;
-  margin-top: 18.5px;
-}
-
-.editor_title {
-  display: inline-block;
-  margin-left: 15px;
-  height: 50px;
 }
 
 .loading {
