Refactor all the components in IconDrawer

--- a/src/documentIndex/Drawer/CustomIcon/CustomIcon.css
+++ b/src/documentIndex/Drawer/CustomIcon/CustomIcon.css
@@ -1,3 +1,11 @@
+.center {
+  display: flex;
+  position: relative;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
 .icon_color_container {
   display: inline-flex;
   align-items: center;
@@ -23,19 +31,13 @@
 }
 
 .icon_list_container {
-  max-height: 200px;
-  margin-left: 20px;
+  max-height: 250px;
   overflow-y: auto;
   overflow-x: hidden;
 }
 
-.icon_save_btn {
-  position: absolute;
-  width: 87%;
-  bottom: 20px;
-}
-
 .icon_color_btn {
+  display: inline-flex;
   border: none;
   cursor: pointer;
   width: 35px;
@@ -47,6 +49,14 @@
 .icon_list_btn {
   border: 0;
   margin: 4px;
+  background-color: transparent;
+  font-size: 32px;
+}
+
+.icon_save_btn {
+  position: absolute;
+  width: 87%;
+  bottom: 20px;
 }
 
 .grow {
@@ -60,8 +70,27 @@
   -webkit-transition-property: transform;
   transition-property: transform;
 }
-.grow:hover, .grow:focus, .grow:active {
-  box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
+
+.grow:hover {
+  color: #91d5ff;
+}
+.grow:hover,
+.grow:focus,
+.grow:active {
   -webkit-transform: scale(1.1);
   transform: scale(1.1);
+}
+.grow:focus,
+.grow:active {
+  color: #1890ff;
+}
+
+.active {
+  color: #1890ff;
+}
+
+.selected {
+  box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px,
+    rgba(6, 24, 44, 0.65) 0px 4px 6px -1px,
+    rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
 }
