Add onUpdateCategory for GeneralOptions in TreeModal

--- a/src/documentIndex/Modal/TreeModal.css
+++ b/src/documentIndex/Modal/TreeModal.css
@@ -1,3 +1,11 @@
+.center {
+  display: flex;
+  position: relative;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
 .list_switch__modal {
   margin-top: 10px;
 }
